concord_macros/tests/trybuild/fail/codegen/reserved_multipart_unsupported.stderr
error: `Multipart` endpoint I/O is reserved but not supported yet
 --> tests/trybuild/fail/codegen/reserved_multipart_unsupported.rs:6:23
  |
6 |     POST Upload(body: Multipart<String>)
  |                       ^^^^^^^^^^^^^^^^^
